force-app/main/default/objects/numm__InvoiceHeader__c/numm__InvoiceHeader__c.object-meta.xml
<CustomObject>
    <description>Objet des entêtes de facture</description>
    <label>Facture</label>
    <nameField>
        <label>Numéro de facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>