force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Adresse1__c.field-meta.xml
<CustomField>
    <fullName>numm__Adresse1__c</fullName>
    <label>Adresse1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>