force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Adresse2__c.field-meta.xml
<CustomField>
    <fullName>numm__Adresse2__c</fullName>
    <label>Adresse2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>