force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Banque__c.field-meta.xml
<CustomField>
    <fullName>numm__Banque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sélectionner la banque pour laquelle l&#39;Iban apparaitra sur la facture</inlineHelpText>
    <label>Banque</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__IdEntity__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>BAN</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Factures (Role du Tiers)</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>