force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__CDPO__c.field-meta.xml
<CustomField>
    <fullName>numm__CDPO__c</fullName>
    <label>Code Postal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>