force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Destinataire__c.field-meta.xml
<CustomField>
    <fullName>numm__Destinataire__c</fullName>
    <label>Destinataire</label>
    <type>TextArea</type>
</CustomField>