force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>numm__DocumentDate__c</fullName>
    <label>Date de facture</label>
    <type>Date</type>
</CustomField>