force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__ExternalID__c.field-meta.xml
<CustomField>
    <fullName>numm__ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>