force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__GenPdfCustom__c.field-meta.xml
<CustomField>
    <fullName>numm__GenPdfCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GenPdfCustom</label>
    <type>Checkbox</type>
</CustomField>