force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IdCurrency__c.field-meta.xml
<CustomField>
    <fullName>numm__IdCurrency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devise</label>
    <referenceTo>numm__currency__c</referenceTo>
    <relationshipName>Factures_Entetes</relationshipName>
    <type>Lookup</type>
</CustomField>