force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IdEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__IdEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipName>Factures_Entetes1</relationshipName>
    <type>Lookup</type>
</CustomField>