force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IdEstablishment__c.field-meta.xml
<CustomField>
    <fullName>numm__IdEstablishment__c</fullName>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipName>Factures_Entetes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>