force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IdThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__IdThirdParty__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__IdEntity__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>CLI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipName>Factures_Entetes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>