force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__InfoDroiteTabTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__InfoDroiteTabTVA__c</fullName>
    <inlineHelpText>Information supplémentaire, s&#39;affiche à côté du tableau récapitulatif de la TVA</inlineHelpText>
    <label>Information supplémentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>