force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IsCo__c.field-meta.xml
<CustomField>
    <fullName>numm__IsCo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Affichage sur le PDF de la mention C/O si cochée</description>
    <label>IsCo</label>
    <type>Checkbox</type>
</CustomField>