force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IsFromRecurrence__c.field-meta.xml
<CustomField>
    <fullName>numm__IsFromRecurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFromRecurrence</label>
    <type>Checkbox</type>
</CustomField>