force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__IsNumm__c.field-meta.xml
<CustomField>
    <fullName>numm__IsNumm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNumm</label>
    <type>Checkbox</type>
</CustomField>