force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__JournalRole__c.field-meta.xml
<CustomField>
    <fullName>numm__JournalRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Journal_Role__c.numm__Etablissement__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__IdEstablishment__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__Journal_Role__c.numm__Journal__r.numm__CategorieJournal__c</field>
            <operation>equals</operation>
            <value>Vente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Journal_Role__c</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Factures_Entetes</relationshipName>
    <type>Lookup</type>
</CustomField>