force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__MontantRglt__c.field-meta.xml
<CustomField>
    <fullName>numm__MontantRglt__c</fullName>
    <label>Montant réglé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>