force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Motif_Avoir__c.field-meta.xml
<CustomField>
    <fullName>numm__Motif_Avoir__c</fullName>
    <label>Motif de l&#39;avoir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commande annulée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>