force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Mt_HT_Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Mt_HT_Entite__c</fullName>
    <formula>numm__Total_HT__c * numm__Taux_de_change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant HT Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>