force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Object__c.field-meta.xml
<CustomField>
    <fullName>numm__Object__c</fullName>
    <inlineHelpText>Saisir l&#39;objet de la facture</inlineHelpText>
    <label>Objet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>