force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Pays__c.field-meta.xml
<CustomField>
    <fullName>numm__Pays__c</fullName>
    <label>Pays</label>
    <length>50</length>
    <type>Text</type>
</CustomField>