force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Reference__c.field-meta.xml
<CustomField>
    <fullName>numm__Reference__c</fullName>
    <inlineHelpText>Saisir une référence de facture</inlineHelpText>
    <label>Reference</label>
    <type>TextArea</type>
</CustomField>