force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Shipment_Type__c</fullName>
    <description>Type de courrier pour l&#39;envoie de Facture via le service Maileva.</description>
    <label>Type d&#39;Envoi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>RAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>