force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Statut_Maileva__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut_Maileva__c</fullName>
    <description>Field to get Maileva statut when sending Invoices through postal way.</description>
    <label>Statut Maileva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Envoyer</fullName>
            </value>
            <value>
                <fullName>En Attente d&#39;Envoie</fullName>
            </value>
            <value>
                <fullName>Envoie en Cours</fullName>
            </value>
            <value>
                <fullName>Envoyé</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>