force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Taux_de_change__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_de_change__c</fullName>
    <label>Taux de change</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>