force-app/main/default/objects/numm__InvoiceHeader__c/fields/numm__Total_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Total_TVA__c</fullName>
    <label>Total TVA</label>
    <summarizedField>numm__InvoiceTransaction__c.numm__TechTotalTVA__c</summarizedField>
    <summaryForeignKey>numm__InvoiceTransaction__c.numm__FactureEntete__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>