force-app/main/default/objects/numm__InvoiceHeader__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__IdEntity__c</columns>
    <columns>numm__IdEstablishment__c</columns>
    <columns>numm__JournalRole__c</columns>
    <columns>numm__DocumentDate__c</columns>
    <columns>numm__Total_HT__c</columns>
    <columns>numm__IdThirdParty__c</columns>
    <columns>numm__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>